Made changes for SEO and social media sharing.

--- a/about/index.html
+++ b/about/index.html
@@ -12,6 +12,26 @@
   <link rel="stylesheet" href="/css/main.css">
   <link rel="canonical" href="http://dev.vishupuri.net/about/">
   <link rel="alternate" type="application/rss+xml" title="B1ackb0x" href="http://dev.vishupuri.net/feed.xml">
+
+<!-- Begin Jekyll SEO tag v2.0.0 -->
+<title>About - B1ackb0x</title>
+<meta property="og:title" content="About" />
+<link rel="canonical" href="http://dev.vishupuri.net/about/" />
+<meta property="og:url" content="http://dev.vishupuri.net/about/" />
+<meta property="og:site_name" content="B1ackb0x" />
+<script type="application/ld+json">
+  {
+    "@context": "http://schema.org",
+    "@type": "WebSite",
+    "name": "B1ackb0x",
+    "headline": "About",
+    "url": "http://dev.vishupuri.net/about/"
+  }
+</script>
+<!-- End Jekyll SEO tag -->
+
+<!-- Place this tag in your head or just before your close body tag. -->
+<script src="https://apis.google.com/js/platform.js" async defer></script>
 </head>
 
 
@@ -65,8 +85,6 @@
 
 <p>More about me can be found out <a href="http://www.vishupuri.net/about.html">here</a>.</p>
 
-
-  </div>
 
 </article>
 
